# tilesmith

./: .gitignore  README.md  main.py  pyproject.toml
examples/: run_execute_lowered_demo.py  run_fusion_demo.py  run_interpreter_demo.py  run_lowering_demo.py
tests/: conftest.py  test_kernel.py  test_tune.py
tilesmith/: __init__.py  kernel.py  tune.py
tilesmith/exec/: interpreter.py  loop_interpreter.py
tilesmith/ir/: __init__.py  loop_ir.py  lower.py  passes.py  tiny_ir.py
